--- a/09oct/notebooks/pandas.ipynb
+++ b/09oct/notebooks/pandas.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e312ad32",
    "metadata": {},
    "outputs": [
@@ -92,20 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "b22ca2c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Example code for importing and exploring data\n",
-    "data = pd.read_csv('sample_data.csv')\n",
+    "data = pd.read_csv('../data/sample_data.csv')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "0e594d0a",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "4  James   18   55000.0       Intern"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "be53d780",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "max    50.000000  120000.00000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "7c1f6a7d",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "8cbcbdde",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
        "4  James  18.0   55000.0       Intern"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "584ca9e3",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
        "3  Linda  50.0  110000.0   Management"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "b3221c71",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
        "Name: Salary, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
