--- a/11oct/tshirts.ipynb
+++ b/11oct/tshirts.ipynb
@@ -174,7 +174,8 @@
     "\n",
     "male_sizes = {\n",
     "    'XS': {'Chest': 774, 'Shoulder': 337}, \n",
-    "    'S': {'Chest': 922, 'Shoulder': 384}, 'M': {'Chest': 996, 'Shoulder': 403}, \n",
+    "    'S': {'Chest': 922, 'Shoulder': 384}, \n",
+    "    'M': {'Chest': 996, 'Shoulder': 403}, \n",
     "    'L': {'Chest': 1056, 'Shoulder': 415}, \n",
     "    'XL': {'Chest': 1117, 'Shoulder': 428}, \n",
     "    '2XL': {'Chest': 1172, 'Shoulder': 441}, \n",
