--- a/18oct/tshirts.ipynb
+++ b/18oct/tshirts.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "(897, 109)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "(2144, 109)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "12                1063                384       781     1654          2XL"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -833,6 +833,225 @@
     "model.fit(males_X, males_y)\n",
     "prediction = model.predict(person)\n",
     "prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test Scikit-Learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "KNeighborsClassifier()"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "male_X = male_dataset.drop(columns=['chestcircumference','biacromialbreadth', 't-shirt size'], axis=1)\n",
+    "male_y = male_dataset['t-shirt size']\n",
+    "female_X = female_dataset.drop(columns=['chestcircumference','biacromialbreadth', 't-shirt size'], axis=1)\n",
+    "female_y = female_dataset['t-shirt size']\n",
+    "\n",
+    "male_X_train, male_X_test, male_y_train, male_y_test = train_test_split(male_X, male_y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "sk_clf = KNeighborsClassifier()\n",
+    "sk_clf.fit(male_X_train, male_y_train)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>weightkg</th>\n",
+       "      <th>stature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1344</th>\n",
+       "      <td>95.9</td>\n",
+       "      <td>173.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1934</th>\n",
+       "      <td>84.3</td>\n",
+       "      <td>175.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>75.5</td>\n",
+       "      <td>173.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>100.9</td>\n",
+       "      <td>172.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1163</th>\n",
+       "      <td>70.2</td>\n",
+       "      <td>165.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      weightkg  stature\n",
+       "1344      95.9    173.5\n",
+       "1934      84.3    175.5\n",
+       "128       75.5    173.1\n",
+       "332      100.9    172.3\n",
+       "1163      70.2    165.9"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "male_X_test.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['XL', 'M', 'M', 'XL', 'S', 'M', 'XL', 'XL', 'M', 'L', 'M', 'XS',\n",
+       "       'M', 'M', 'S', 'L', 'S', '3XL', 'S', 'L', 'S', 'XL', 'S', 'M', 'S',\n",
+       "       'XL', 'M', 'M', 'L', '2XL', 'M', 'S', 'S', 'L', 'XL', 'M', 'L',\n",
+       "       'S', 'L', 'M', 'M', 'M', '2XL', 'L', 'L', 'M', 'M', 'S', 'M', 'M',\n",
+       "       'S', 'S', 'L', 'M', '2XL', 'L', 'XL', 'S', 'S', 'L', 'M', 'XL',\n",
+       "       'XL', 'L', 'M', 'L', 'XL', 'L', 'M', 'S', 'XL', '3XL', 'S', 'M',\n",
+       "       'XL', '2XL', 'S', 'L', 'M', 'L', 'M', 'S', 'XL', 'S', 'XL', 'XS',\n",
+       "       'M', '3XL', 'M', 'S', 'S', 'S', 'L', '2XL', 'L', 'L', 'L', 'S',\n",
+       "       'S', 'L', 'S', 'XL', 'M', 'M', '2XL', 'L', 'XL', 'XS', 'L', 'M',\n",
+       "       'L', 'XL', 'L', 'M', 'M', 'M', 'S', 'L', 'M', '3XL', '3XL', 'M',\n",
+       "       'XL', 'M', 'M', '2XL', 'L', 'L', 'M', 'M', 'S', 'L', 'M', 'XL',\n",
+       "       'M', 'L', 'M', '2XL', 'S', 'XL', 'L', 'XL', 'L', '2XL', 'XL', 'L',\n",
+       "       'S', 'L', 'XL', 'S', 'L', '3XL', 'L', 'S', 'L', 'M', 'M', 'S', 'L',\n",
+       "       'L', 'S', 'L', 'L', 'L', 'L', 'S', 'L', '2XL', 'XS', 'M', 'M', 'M',\n",
+       "       'S', 'M', 'M', 'S', 'S', 'L', 'M', 'M', 'M', 'M', 'M', 'XL', 'L',\n",
+       "       'XL', 'L', 'M', 'L', 'L', '2XL', 'L', 'XL', 'XL', 'L', 'S', 'L',\n",
+       "       'XL', 'S', 'S', '2XL', 'L', 'S', 'L', 'S', 'S', 'L', 'L', 'L', 'L',\n",
+       "       'L', 'S', 'XS', 'S', 'M', 'M', 'XL', 'L', 'XS', 'L', 'M', 'L', 'L',\n",
+       "       'S', 'XL', 'S', 'L', '2XL', 'M', 'M', 'L', 'M', 'S', 'XL', 'M',\n",
+       "       'M', 'L', 'M', 'XL', 'L', 'M', 'M', 'M', 'S', 'M', 'XL', 'L', 'XS',\n",
+       "       'M', 'M', 'XS', 'XL', 'M', 'S', 'XL', 'M', '3XL', 'L', 'S', 'S',\n",
+       "       'L', 'M', 'M', 'M', 'L', 'M', 'XL', 'M', 'M', 'XS', 'M', 'L', 'S',\n",
+       "       '2XL', 'M', 'L', 'XL', 'L', 'S', 'XL', 'M', 'L', 'XS', 'XL', 'XL',\n",
+       "       'M', '2XL', 'L', 'L', 'L', 'M', 'L', 'XL', 'M', 'L', 'XL', '3XL',\n",
+       "       'XL', 'M', 'L', 'S', '2XL', 'S', 'S', 'M', 'XL', 'L', 'XL', 'L',\n",
+       "       '3XL', 'S', 'L', 'M', 'S', 'L', '3XL', 'S', 'L', 'L', 'XL', '2XL',\n",
+       "       '2XL', 'S', 'M', 'XS', 'S', '2XL', 'M', 'S', 'M', 'S', 'S', 'L',\n",
+       "       'M', 'M', 'L', 'L', 'XL', 'M', 'L', 'S', 'S', 'L', '2XL', 'L',\n",
+       "       '2XL', 'S', 'S', 'M', 'S', 'L', 'L', 'L', 'S', 'L', 'S', 'S', 'S',\n",
+       "       '2XL', 'M', 'XL', 'M', 'M', 'M', 'M', 'M', 'M', 'XL', 'XS', 'L',\n",
+       "       'M', 'L', 'L', 'XS', 'M', 'M', 'L', 'L', 'L', '2XL', 'L', 'S', 'S',\n",
+       "       '2XL', 'L', 'XL', 'L', 'S', 'S', 'M', 'M', '2XL', 'XL', 'L', '3XL',\n",
+       "       'L', 'S', 'M', 'L', 'M', 'S', '3XL', 'XL', 'XS', 'XS', 'XL', 'M',\n",
+       "       'M', 'M', 'L', 'L', 'L', 'L', 'S', 'S', 'L', 'L', 'S', 'M', 'S',\n",
+       "       'XL', 'S', 'L', 'M', 'M', 'M', 'XL', 'L', 'L'], dtype=object)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = sk_clf.predict(male_X_test)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5687645687645687"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy = accuracy_score(male_y_test, predictions)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Startpuls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://forms.office.com/e/tWAbpLEqpe"
    ]
   }
  ],
